fixed layout issue

--- a/src/js/Components/StockNews/style.scss
+++ b/src/js/Components/StockNews/style.scss
@@ -1,7 +1,6 @@
 .news-section
 {
-    //width: 90%;
-    //margin: 0 auto;
+    width: 100%;
     margin-top: 50px;
     font-family: "Noto Sans TC", sans-serif;
     line-height: 1.5;
